--- a/public/config/config.json
+++ b/public/config/config.json
@@ -2,7 +2,7 @@
   "CONTRACT_ADDRESS": "0x4e709757b6b1a6c2fd54fde629ed45e5107b133b",
   "SCAN_LINK": "https://bscscan.com/token/0x4e709757b6b1a6c2fd54fde629ed45e5107b133b",
   "NETWORK": {
-    "NAME": "BINANCE",
+    "NAME": "Binance",
     "SYMBOL": "BNB",
     "ID": 56
   },
